@@ -1,3 +1,7 @@
+2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed error in TCEmain hook with TYPO3 4.3
+
 2008-10-07	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Added hooks to pre-/post-process URLs
